scripts/ffi_with_len_nul_smoke.py

#!/usr/bin/env python3
"""
Smoke test for `loci_generate_with_len` using UTF-8 payload with interior NUL bytes.
"""

import argparse
import ctypes
import os
import sys
from ctypes import c_char_p, c_float, c_int32, c_uint32, c_void_p


def parse_args() -> argparse.Namespace:
    parser = argparse.ArgumentParser(description="with_len + interior NUL smoke test")
    parser.add_argument("--dll", required=True, help="Path to loci shared library")
    parser.add_argument("--model", required=True, help="Path to GGUF model")
    parser.add_argument("--ctx", type=int, default=2048, help="Context length")
    parser.add_argument("--gpu-layers", type=int, default=0, help="GPU layer count")
    parser.add_argument("--max-tokens", type=int, default=4, help="Max tokens to generate")
    parser.add_argument("--temperature", type=float, default=0.7, help="Sampling temperature")
    return parser.parse_args()


def main() -> int:
    args = parse_args()
    dll_path = os.path.abspath(args.dll)
    model_path = os.path.abspath(args.model)
    if not os.path.isfile(dll_path):
        print(f"ERROR: DLL not found: {dll_path}")
        return 2
    if not os.path.isfile(model_path):
        print(f"ERROR: model not found: {model_path}")
        return 2

    if os.name == "nt":
        os.add_dll_directory(os.path.dirname(dll_path))
        if os.path.isdir(r"D:\mingw64\bin"):
            os.add_dll_directory(r"D:\mingw64\bin")

    lib = ctypes.CDLL(dll_path)
    if not hasattr(lib, "loci_generate_with_len"):
        print("ERROR: current library does not export loci_generate_with_len")
        return 3

    lib.loci_engine_new.argtypes = [c_char_p, c_uint32, c_int32]
    lib.loci_engine_new.restype = c_void_p
    lib.loci_generate_with_len.argtypes = [c_void_p, c_char_p, c_uint32, c_uint32, c_float]
    lib.loci_generate_with_len.restype = c_void_p
    lib.loci_get_last_error.argtypes = []
    lib.loci_get_last_error.restype = c_char_p
    lib.loci_free_string.argtypes = [c_void_p]
    lib.loci_free_string.restype = None
    lib.loci_engine_free_safe.argtypes = [ctypes.POINTER(c_void_p)]
    lib.loci_engine_free_safe.restype = None

    engine = lib.loci_engine_new(model_path.encode("utf-8"), args.ctx, args.gpu_layers)
    if not engine:
        err = (lib.loci_get_last_error() or b"").decode("utf-8", errors="replace")
        print(f"ERROR: loci_engine_new failed: {err}")
        return 4

    payload = "with_len\0NUL\0payload".encode("utf-8")
    out_ptr = lib.loci_generate_with_len(
        engine,
        payload,
        c_uint32(len(payload)),
        c_uint32(args.max_tokens),
        c_float(args.temperature),
    )

    rc = 0
    if out_ptr:
        out = ctypes.cast(out_ptr, c_char_p).value or b""
        print(f"OK: generated bytes={len(out)}")
        lib.loci_free_string(out_ptr)
    else:
        err = (lib.loci_get_last_error() or b"").decode("utf-8", errors="replace")
        print(f"ERROR: generation failed: {err}")
        if "interior NUL" in err:
            rc = 5
        else:
            rc = 6

    engine_ref = c_void_p(engine)
    lib.loci_engine_free_safe(ctypes.byref(engine_ref))
    if engine_ref.value is not None:
        print("ERROR: engine pointer was not nulled by loci_engine_free_safe")
        return 7

    return rc


if __name__ == "__main__":
    sys.exit(main())
